--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,12 @@
 .App{
     align-items: center;
     justify-content: center;
+    padding-top: 200px;
+    
+    
+    /* position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    padding: 10px;  */
 }
